@@ -2,15 +2,16 @@ package org.apereo.cas.configuration.model.core.monitor;
 
 import org.apereo.cas.configuration.support.RequiresModule;
 
+import com.fasterxml.jackson.annotation.JsonFilter;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.ToString;
 import lombok.experimental.Accessors;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -19,13 +20,16 @@ import java.util.stream.Stream;
  * @author Misagh Moayyed
  * @since 6.0.0
  */
-@RequiresModule(name = "cas-server-support-reports", automated = true)
+@RequiresModule(name = "cas-server-support-reports")
 @Getter
 @Setter
 @ToString
 @Accessors(chain = true)
+@JsonFilter("ActuatorEndpointProperties")
 public class ActuatorEndpointProperties implements Serializable {
+    @Serial
     private static final long serialVersionUID = -2463521198550485506L;
+
     /**
      * Required user roles.
      */
@@ -44,7 +48,7 @@ public class ActuatorEndpointProperties implements Serializable {
     /**
      * Define the security access level of the endpoint.
      */
-    private List<EndpointAccessLevel> access = Stream.of(EndpointAccessLevel.DENY).collect(Collectors.toList());
+    private List<EndpointAccessLevel> access = Stream.of(EndpointAccessLevel.DENY).toList();
 
     /**
      * Define the security access level for the endpoint.
