@@ -1,15 +1,17 @@
 package org.apereo.cas.configuration.model.core.web;
 
+import org.apereo.cas.configuration.support.DurationCapable;
 import org.apereo.cas.configuration.support.RequiresModule;
 
+import com.fasterxml.jackson.annotation.JsonFilter;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.experimental.Accessors;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -22,6 +24,7 @@ import java.util.stream.Stream;
 @Getter
 @Setter
 @Accessors(chain = true)
+@JsonFilter("MessageBundleProperties")
 public class MessageBundleProperties implements Serializable {
 
     /**
@@ -29,6 +32,7 @@ public class MessageBundleProperties implements Serializable {
      */
     public static final String DEFAULT_BUNDLE_PREFIX_AUTHN_FAILURE = "authenticationFailure.";
 
+    @Serial
     private static final long serialVersionUID = 3769733438559663237L;
 
     /**
@@ -39,23 +43,24 @@ public class MessageBundleProperties implements Serializable {
     /**
      * Cache size.
      */
-    private int cacheSeconds = 180;
+    @DurationCapable
+    private String cacheSeconds = "PT180S";
 
     /**
      * Flag that controls whether to fallback to the default system locale if no locale is specified explicitly.
      * Set whether to fall back to the system Locale if no files for a specific Locale have been found.
      * If this is turned off, the only fallback will be the default file (e.g. "messages.properties" for basename "messages").
-     * Falling back to the system Locale is the default behavior of java.util.ResourceBundle.
+     * Falling back to the system Locale is the default behavior of {@link java.util.ResourceBundle}.
      * However, this is often not desirable in an application server environment, where the system
-     * Locale is not relevant to the application at all: set this flag to "false" in such a scenario.
+     * Locale is not relevant to the application at all: set this flag to {@code false} in such a scenario.
      */
     private boolean fallbackSystemLocale;
 
     /**
      * Flag that controls whether to use code message.
      * Set whether to use the message code as default message instead of throwing a
-     * NoSuchMessageException. Useful for development and debugging.
-     * Note: In case of a MessageSourceResolvable with multiple codes (like a FieldError) and a
+     * {@code NoSuchMessageException}. Useful for development and debugging.
+     * Note: In case of a {@code MessageSourceResolvable} with multiple codes (like a FieldError) and a
      * MessageSource that has a parent MessageSource, do not activate "useCodeAsDefaultMessage" in
      * the parent: Else, you'll get the first code returned as message by the parent, without attempts to check further codes.
      */
@@ -70,7 +75,8 @@ public class MessageBundleProperties implements Serializable {
      * The associated resource bundles will be checked sequentially when resolving a message code.
      * Note that message definitions in a previous resource bundle will override ones in a later bundle, due to the sequential lookup.
      */
-    private List<String> baseNames = Stream.of("classpath:custom_messages", "classpath:messages").collect(Collectors.toList());
+    private List<String> baseNames = Stream.of("file:/etc/cas/config/custom_messages",
+        "classpath:custom_messages", "classpath:messages").toList();
 
     /**
      * A list of strings representing common names for this message bundle.
@@ -80,5 +86,5 @@ public class MessageBundleProperties implements Serializable {
      * Entries in last common names override first values (as opposed to baseNames used in message bundles).
      */
     private List<String> commonNames = Stream.of("classpath:common_messages.properties",
-        "file:/etc/cas/config/common_messages.properties").collect(Collectors.toList());
+        "file:/etc/cas/config/common_messages.properties").toList();
 }
