@@ -1,14 +1,16 @@
 package org.apereo.cas.configuration.model.core.web.tomcat;
 
+import org.apereo.cas.configuration.support.RequiredProperty;
 import org.apereo.cas.configuration.support.RequiresModule;
 
+import com.fasterxml.jackson.annotation.JsonFilter;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.experimental.Accessors;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -21,28 +23,31 @@ import java.util.stream.Stream;
 @Getter
 @Setter
 @Accessors(chain = true)
+@JsonFilter("CasEmbeddedApacheTomcatBasicAuthenticationProperties")
 public class CasEmbeddedApacheTomcatBasicAuthenticationProperties implements Serializable {
 
+    @Serial
     private static final long serialVersionUID = 1164446071136700282L;
 
     /**
-     * Enable the SSL valve for apache tomcat.
+     * Enable Basic authentication for Tomcat.
      */
+    @RequiredProperty
     private boolean enabled;
 
     /**
      * Security roles for the CAS application.
      */
-    private List<String> securityRoles = Stream.of("admin").collect(Collectors.toList());
+    private List<String> securityRoles = Stream.of("admin").toList();
 
     /**
      * Add an authorization role, which is a role name that will be
      * permitted access to the resources protected by this security constraint.
      */
-    private List<String> authRoles = Stream.of("admin").collect(Collectors.toList());
+    private List<String> authRoles = Stream.of("admin").toList();
 
     /**
      * Add a URL pattern to be part of this web resource collection.
      */
-    private List<String> patterns = Stream.of("/*").collect(Collectors.toList());
+    private List<String> patterns = Stream.of("/*").toList();
 }
