@@ -1,5 +1,6 @@
 package org.apereo.cas.configuration.model.support.couchbase;
 
+import org.apereo.cas.configuration.support.DurationCapable;
 import org.apereo.cas.configuration.support.RequiredProperty;
 import org.apereo.cas.configuration.support.RequiresModule;
 
@@ -7,9 +8,9 @@ import lombok.Getter;
 import lombok.Setter;
 import lombok.experimental.Accessors;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -24,42 +25,55 @@ import java.util.stream.Stream;
 @RequiresModule(name = "cas-server-support-couchbase-core")
 public abstract class BaseCouchbaseProperties implements Serializable {
 
+    @Serial
     private static final long serialVersionUID = 6550895842866988551L;
 
     /**
      * Node addresses.
      */
     @RequiredProperty
-    private List<String> addresses = Stream.of("localhost").collect(Collectors.toList());
+    private List<String> addresses = Stream.of("localhost").toList();
 
     /**
      * String representation of connection timeout.
      */
+    @DurationCapable
     private String connectionTimeout = "PT60S";
+
+    /**
+     * String representation of idle connection timeout.
+     */
+    @DurationCapable
+    private String idleConnectionTimeout = "PT60S";
 
     /**
      * String representation of search timeout.
      */
+    @DurationCapable
     private String searchTimeout = "PT30S";
 
     /**
      * String representation of query timeout.
      */
+    @DurationCapable
     private String queryTimeout = "PT30S";
 
     /**
      * String representation of view timeout.
      */
+    @DurationCapable
     private String viewTimeout = "PT30S";
 
     /**
      * String representation of KV timeout.
      */
+    @DurationCapable
     private String kvTimeout = "PT30S";
 
     /**
      * String representation of scan timeout.
      */
+    @DurationCapable
     private String scanWaitTimeout = "PT30S";
 
     /**
@@ -78,10 +92,17 @@ public abstract class BaseCouchbaseProperties implements Serializable {
      * Maximum number of connections made to the cluster.
      */
     private int maxHttpConnections = 5;
+
     /**
      * Maximum number of parallel threads made for queries.
      */
     private int maxParallelism;
+
+    /**
+     * Allows to customize the maximum number of
+     * requests allowed in the retry timer.
+     */
+    private long maxNumRequestsInRetry = 32768;
 
     /**
      * Bucket name.
@@ -91,13 +112,13 @@ public abstract class BaseCouchbaseProperties implements Serializable {
 
     /**
      * Query scan consistency.
-     *
+     * <p>
      * By default, the query engine will return whatever is currently in the index at
      * the time of query (this mode is also called {@code NOT_BOUNDED}). If you
      * need to include everything that has just been written, a different scan consistency must
      * be chosen. If {@code REQUEST_PLUS} is chosen, it will likely take a bit
      * longer to return the results but the query engine will make sure that it is as up-to-date as possible.
-     *
+     * <p>
      * Accepted values are: {@code NOT_BOUNDED, REQUEST_PLUS}.
      */
     private String scanConsistency = "NOT_BOUNDED";
