@@ -3,8 +3,6 @@ package org.apereo.cas.authentication.principal;
 import org.apereo.cas.services.ServicesManager;
 import org.apereo.cas.util.LoggingUtils;
 
-import lombok.Getter;
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 
@@ -18,16 +16,12 @@ import java.nio.charset.StandardCharsets;
  * @since 6.1.0
  */
 @Slf4j
-@RequiredArgsConstructor
-@Getter
-public class DefaultServiceMatchingStrategy implements ServiceMatchingStrategy {
-    private final ServicesManager servicesManager;
-    
+public record DefaultServiceMatchingStrategy(ServicesManager servicesManager) implements ServiceMatchingStrategy {
     @Override
     public boolean matches(final Service service, final Service serviceToMatch) {
         try {
-            val thisUrl = URLDecoder.decode(service.getId(), StandardCharsets.UTF_8.name());
-            val serviceUrl = URLDecoder.decode(serviceToMatch.getId(), StandardCharsets.UTF_8.name());
+            val thisUrl = URLDecoder.decode(service.getId(), StandardCharsets.UTF_8);
+            val serviceUrl = URLDecoder.decode(serviceToMatch.getId(), StandardCharsets.UTF_8);
 
             LOGGER.trace("Decoded urls and comparing [{}] with [{}]", thisUrl, serviceUrl);
             return thisUrl.equalsIgnoreCase(serviceUrl);
