@@ -2,7 +2,7 @@ package org.apereo.cas.monitor;
 
 import org.apereo.cas.config.CasCoreUtilConfiguration;
 import org.apereo.cas.monitor.config.LdapMonitorConfiguration;
-import org.apereo.cas.util.junit.EnabledIfPortOpen;
+import org.apereo.cas.util.junit.EnabledIfListeningOnPort;
 
 import lombok.val;
 import org.junit.jupiter.api.Tag;
@@ -15,8 +15,6 @@ import org.springframework.boot.actuate.health.HealthIndicator;
 import org.springframework.boot.actuate.health.Status;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.cloud.autoconfigure.RefreshAutoConfiguration;
-
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -36,7 +34,7 @@ import static org.junit.jupiter.api.Assertions.*;
         "cas.monitor.ldap[0].name=LDAP"
     })
 @Tag("Ldap")
-@EnabledIfPortOpen(port = 10389)
+@EnabledIfListeningOnPort(port = 10389)
 public class PooledLdapConnectionFactoryHealthIndicatorTests {
     @Autowired
     @Qualifier("pooledLdapConnectionFactoryHealthIndicator")
@@ -50,8 +48,7 @@ public class PooledLdapConnectionFactoryHealthIndicatorTests {
     public void verifyObserve() throws Exception {
         val results = monitor.stream()
             .map(it -> HealthIndicator.class.cast(it.getContributor()))
-            .map(it -> it.health().getStatus())
-            .collect(Collectors.toList());
+            .map(it -> it.health().getStatus()).toList();
         assertFalse(results.isEmpty());
         assertEquals(Status.UP, results.get(0));
         pooledLdapConnectionFactoryHealthIndicatorListFactoryBean.destroy();
